data.frame output available

--- a/vignettes/baRulho_quantifying_sound_degradation.Rmd
+++ b/vignettes/baRulho_quantifying_sound_degradation.Rmd
@@ -792,6 +792,12 @@ print(TRUE)
 
 ```
 
+Below are some examples from actual test signals that were re-recorded at 1, 30, 65, and 100 m, respectively:
+
+ <img src="tlalpan_playback.jpeg" alt="Re-recorded at Tlalpan">
+
+&nbsp;
+
 
 ---
 
